<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solazo</string>
    <string name="thank_you">Coming Soon</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Solazo</string>
    <string name="refresh">refresh</string>
    <string name="submit">submit</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="title_activity_guess">GuessActivity</string>
    <string name="button_guess">Guess</string>
    <string name="button_post">Submit</string>
    <string name="button_about">About</string>
    <string name="temperature_hint">temperature</string>
    <string name="humidity_hint">humidity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_author">Louis Gutierrez and Daniel Zhao</string>
    <string name="about_app">Solazo is a weather app that helps to approximate the weather. That may seem unnecessary in some cases, and Solazo does not aim to replace your other weather apps. But if your located far away from a weather station, in what we call a \"Weather Station Desert\", then this app could be really useful. Just use your android phone to send us your coordinates and our app will approximate your temperature and humidity for your location. If you\'re interested in helping us collect data, especially if you live in a rural area, then use the submit function to send us your temperature and humidity (in Fahrenheit please). If you\'re interested in helping more, please contact Louis at gutiel@rpi.edu. Thanks!</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="hello_world">Hello world!</string>

</resources>