<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/imagePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="109dp"
        android:contentDescription="@string/button_post"
        android:onClick="startPostActivity"
        android:text="@string/button_post" />

    <Button
        android:id="@+id/imageGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/button_guess"
        android:onClick="startGuessActivity"
        android:text="@string/button_guess" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="14dp"
        android:layout_marginRight="32dp"
        android:text="@string/about_author"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/imageAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imagePost"
        android:layout_marginTop="33dp"
        android:onClick="startAboutActivity"
        android:text="@string/button_about" />

</RelativeLayout>