<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/thank_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        tools:context=".PostActivity" />
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thank_you"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:onClick="updateUIDisplay"
        android:text="@string/submit" />

    <EditText
        android:id="@+id/editTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/temperature_hint"
        android:inputType="numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/editHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTemperature"
        android:layout_below="@+id/editTemperature"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/humidity_hint"
        android:inputType="numberDecimal" />

</RelativeLayout>